Actions
Bug #9229
closedipnet: this statement may fall through
Start date:
2018-03-04
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
../../common/inet/ipnet/ipnet.c:683:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (iocp->ioc_count == TRANSPARENT) { ^ ../../common/inet/ipnet/ipnet.c:689:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c344b72c2f62222cffc1119518764557c5bf956f
commit c344b72c2f62222cffc1119518764557c5bf956f Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:38.000Z 9229 ipnet: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions